# enpm690_project

./: .gitignore  README.md
docs/report/: report.tex
ep_common/: CMakeLists.txt  README.md  package.xml
ep_common/include/ep_common/: command_interface_controller_i.hpp  node_id.hpp
ep_common/src/: command_interface_controller_i.cpp  node_id.cpp
ep_common_interfaces/: CMakeLists.txt  README.md  package.xml
ep_common_interfaces/srv/: GetDouble.srv  GetFloat64MultiArray.srv  SetBool.srv  SetDouble.srv  SetString.srv  SetStringArray.srv
ep_demos/ep_diff_drive_demo/: CMakeLists.txt  README.md  package.xml
ep_demos/ep_diff_drive_demo/launch/: diff_drive.launch.py
ep_demos/ep_diff_drive_demo/urdf/: diff_drive.ros2_control.xacro  diff_drive.urdf.xacro  diff_drive_description.urdf
ep_demos/ep_gantry_velocity_control_demo/: CMakeLists.txt  README.md  ep_gantry_velocity_control_demo_plugin.xml  package.xml
ep_demos/ep_gantry_velocity_control_demo/config/: training.yaml
ep_demos/ep_gantry_velocity_control_demo/include/ep_gantry_velocity_control_demo/: pid_constants.hpp  velocity_pid_controller.hpp  velocity_pid_fitness_evaluator.hpp  velocity_pid_state_observer.hpp  velocity_trapezoidal_profile.hpp
ep_demos/ep_gantry_velocity_control_demo/launch/: gantry_velocity_control.launch.py
ep_demos/ep_gantry_velocity_control_demo/src/: pid_solution_genetic_algorithm_controller.cpp  velocity_pid_controller.cpp  velocity_pid_fitness_evaluator.cpp  velocity_pid_state_observer.cpp
ep_demos/ep_gantry_velocity_control_demo/urdf/: gantry_velocity_control.ros2_control.xacro  gantry_velocity_control.urdf.xacro  gantry_velocity_control_description.urdf
ep_training/: CMakeLists.txt  README.md  package.xml
ep_training/include/ep_training/: campaign_orchestrator_gui.hpp  campaign_orchestrator_gui_p.hpp  fitness_evaluator_i.hpp  genetic_algorithm_controller_i.hpp  genetic_algorithm_controller_i_impl.hpp  state_observer_i.hpp  time_dependent_fitness_evaluator_i.hpp
ep_training/src/: campaign_orchestrator_gui.cpp  fitness_evaluator_i.cpp  state_observer_i.cpp  time_dependent_fitness_evaluator_i.cpp
ep_training/ui/: campaign_orchestrator_gui.ui
ep_training_interfaces/: CMakeLists.txt  README.md  package.xml
ep_training_interfaces/action/: ExecuteTrainingCampaign.action
ep_training_interfaces/msg/: ExercisingSolutionFinishedReason.msg  ParallelAgentCount.msg
