<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ep_common</name>
    <version>0.0.0</version>
    <description>Tools common to any configuration of the EP system.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>Apache License 2.0</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
