<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ep_training</name>
    <version>0.0.0</version>
    <description>Tools to run the EP system in a training configuration.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>Apache License 2.0</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>controller_manager_msgs</depend>
    <depend>ep_common</depend>
    <depend>ep_common_interfaces</depend>
    <depend>ep_training_interfaces</depend>
    <depend>Qt5</depend>
    <depend>rcl_interfaces</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rosgraph_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
