<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ep_gantry_velocity_control_demo</name>
    <version>0.0.0</version>
    <description>A demo of the ENPM690 Project using a velocity-controlled gantry.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>Apache License 2.0</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
